# AUV-Tasks-Unclean

./: .gitignore  CMakeLists.txt
include/: GateFinal.h
src/: GateFinal.cpp  gate.cpp  main.cpp  segmentBins.cpp  split.cpp  test.cpp  track.cpp  yaw.cpp
